// Copyright (c) Microsoft Corporation.
// Licensed under the MIT license.
// SPDX-License-Identifier: MIT

syntax = "proto3";

package managed_subscribe;

service ManagedSubscribe {
    rpc GetSubscriptionInfo (SubscriptionInfoRequest) returns (SubscriptionInfoResponse);
}

message Constraint {
    string type = 1;
    string value = 2;
}

message SubscriptionInfoRequest {
    string entityId = 1;
    repeated Constraint constraints = 2;
}

message SubscriptionInfoResponse {
    string protocol = 1;
    string uri = 2;
    string context = 3;
}

service ManagedSubscribeCallback {
    rpc TopicManagementCB (TopicManagementRequest) returns (TopicManagementResponse);
}

message SubscriptionInfo {
    string protocol = 1;
    string uri = 2;
}

message CallbackPayload {
    string entityId = 1;
    string topic = 2;
    repeated Constraint constraints = 3;
    SubscriptionInfo subscriptionInfo = 4; // Only used for a start publish action.
}

message TopicManagementRequest {
    string action = 1;
    CallbackPayload payload = 2;
}

message TopicManagementResponse { }